<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#222222"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/controlsButtontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/controlsButton"
        android:layout_below="@+id/controlsButton"
        android:layout_marginRight="23dp"
        android:textColor="@color/whiteText"
        android:layout_centerHorizontal="true"
        android:text="@string/Controls" />

    <TextView
        android:id="@+id/playlistButtontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/playlistButton"
        android:layout_below="@+id/playlistButton"
        android:layout_marginRight="24dp"
        android:textColor="@color/whiteText"
        android:layout_centerHorizontal="true"
        android:text="@string/Playlist" />

    <ImageButton
        android:id="@+id/playlistButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/controlsButtontextView"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/controlsButton"
        android:scaleType="fitXY"
        android:src="@drawable/queue" />

    <ImageButton
        android:id="@+id/connectButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/controlsButtontextView"
        android:layout_marginTop="29dp"
        android:layout_toLeftOf="@+id/playlistButton"
        android:scaleType="fitXY"
        android:onClick="createConnect"
        android:src="@drawable/connect" />

    <TextView
        android:id="@+id/connectButtontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/controlsButtontextView"
        android:layout_below="@+id/connectButton"
        android:textColor="@color/whiteText"
        android:layout_centerHorizontal="true"
        android:text="@string/Connect" />

    <ImageButton
        android:id="@+id/browseButton"
        style="@style/AppTheme"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/connectButtontextView"
        android:layout_alignRight="@+id/playlistButton"
        android:scaleType="fitXY"
        android:src="@drawable/browse" />

    <TextView
        android:id="@+id/browseButtontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/playlistButtontextView"
        android:layout_below="@+id/browseButton"
        android:textColor="@color/whiteText"
        android:layout_centerHorizontal="true"
        android:text="@string/Browse" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/connectButtontextView"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/browseButtontextView"
        android:scaleType="fitXY"
        android:src="@drawable/info" /> 

   <ImageButton
        android:id="@+id/controlsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:src="@drawable/controls" />

    <TextView
        android:id="@+id/infotextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/whiteText"
        android:text="@string/Info" />

</RelativeLayout>